--- a/public/html/index.html
+++ b/public/html/index.html
@@ -16,7 +16,7 @@
       <li>
         <span>{{ name }} - {{ email }}</span>
         <a href="/edit?index={{ @index }}">Edit</a>
-        <a href="/process-delete?index={{ @index }}">Delete</a>
+        <a href="/process-delete?id={{ id }}">Delete</a>
       </li>
       {{/each}}
     </ol>
